<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:weightSum="12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sd_bg_login_shape"
                android:orientation="vertical"
                android:layout_weight="3">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sd_vector_waves"
                    android:contentDescription="@null" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sura_demo_app_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="@id/layout_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/layout_title"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/sura_demo_login_title"
                    android:textColor="@color/sura_demo_color_blue"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textLayout_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/sura_demo_login_user"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:boxStrokeColor="@color/sura_demo_color_blue"
                    app:hintTextColor="@color/sura_demo_color_blue"
                    app:layout_constraintTop_toBottomOf="@id/textView_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="20"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textLayout_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/sura_demo_login_password"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:passwordToggleEnabled="true"
                    app:boxStrokeColor="@color/sura_demo_color_blue"
                    app:hintTextColor="@color/sura_demo_color_blue"
                    app:layout_constraintTop_toBottomOf="@id/textLayout_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_password"
                        android:inputType="numberPassword"
                        android:maxLength="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_enter"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:text="@string/sura_demo_login_enter"
                    android:textAllCaps="false"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:backgroundTint="@color/sura_demo_color_blue"
                    app:cornerRadius="20dp"
                    app:layout_constraintTop_toBottomOf="@id/textLayout_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>