<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.suraapppractice.flows.dashboard.viewmodels.SDDashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_initials_details"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:translationZ="5dp"
            android:background="@drawable/sd_bg_circle_ring"
            tools:text="Ed"
            android:text="@={viewModel.detailInitialsNameMov}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="70dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="18dp">

                <TextView
                    android:id="@+id/textView_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="$200.00 MXN"
                    android:text="@={viewModel.detailAmountMov}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_start"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="18dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_end"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="18dp" />

                <TextView
                    android:id="@+id/textView_label_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textSize="14sp"
                    android:text="@string/sura_demo_name"
                    app:layout_constraintTop_toBottomOf="@id/textView_amount"
                    app:layout_constraintStart_toEndOf="@id/guide_start"/>

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    tools:text="Eduardo Torres"
                    android:text="@={viewModel.detailUserNameMov}"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/textView_label_name"
                    app:layout_constraintStart_toEndOf="@id/guide_start"/>

                <TextView
                    android:id="@+id/textView_label_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:text="@string/sura_demo_message"
                    app:layout_constraintTop_toBottomOf="@id/textView_name"
                    app:layout_constraintStart_toEndOf="@id/guide_start"/>

                <TextView
                    android:id="@+id/textView_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    tools:text="Es lo que te debo."
                    android:text="@={viewModel.detailMessageMov}"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/textView_label_message"
                    app:layout_constraintStart_toEndOf="@id/guide_start"
                    app:layout_constraintEnd_toStartOf="@id/guide_end"/>

                <TextView
                    android:id="@+id/textView_label_reference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:text="@string/sura_demo_reference"
                    app:layout_constraintTop_toBottomOf="@id/textView_message"
                    app:layout_constraintStart_toEndOf="@id/guide_start"/>

                <TextView
                    android:id="@+id/textView_reference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    tools:text="8334401029"
                    android:text="@={viewModel.detailReferenceMov}"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/textView_label_reference"
                    app:layout_constraintStart_toEndOf="@id/guide_start"/>

                <Button
                    android:id="@+id/button_acept"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/sura_demo_acept"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/sura_demo_color_blue"
                    app:layout_constraintTop_toBottomOf="@id/textView_reference"
                    app:layout_constraintStart_toEndOf="@id/guide_start"
                    app:layout_constraintEnd_toStartOf="@id/guide_end" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>